# rv-meta-code

./: .gitignore  AGENTS.md  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
docs/architecture/: 00_principles.md  01_directory_structure.md  02_naming_rules.md  03_application_architecture.md  04_dependency_rules.md  05_file_split_rules.md  06_typescript_rules.md  07_svelte_rules.md  08_rust_rules.md  09_testing_rules.md  10_code_review_rules.md  (+1 more)
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  lib.rs  main.rs  rv-meta.code-workspace  tauri.conf.json
src-tauri/application/: connection_service.rs  facade_generator.rs  generator_registry.rs  metadata_service.rs  mod.rs  openapi_validator.rs  schema_service.rs  sdk_generator.rs  server_service.rs
src-tauri/capabilities/: default.json
src-tauri/commands/: mod.rs
src-tauri/commands/connection/: delete.rs  list.rs  mod.rs  save.rs  set_active.rs  test.rs
src-tauri/commands/metadata/: components.rs  current_connection.rs  document_detail.rs  documents.rs  entities.rs  entity_detail.rs  mod.rs  openapi_specs.rs  operation.rs  schemas.rs  set_read_only.rs  validate_openapi.rs
src-tauri/commands/metadata/operation_groups/: detail.rs  list.rs
src-tauri/commands/schema/: compile.rs  diagnose.rs  mod.rs
src-tauri/commands/sdk/: generate.rs  list.rs  mod.rs  profiles.rs
src-tauri/commands/server/: delete.rs  list.rs  mod.rs  save.rs  test.rs
src-tauri/domain/: connection.rs  mod.rs  server.rs
src-tauri/dto/: compile_schema_request.rs  compile_schema_response.rs  connection_dto.rs  metadata_dto.rs  mod.rs  operation_group_dto.rs  sdk_dto.rs  sdk_profile_dto.rs  server_dto.rs  validation_dto.rs
src-tauri/errors/: app_error.rs
src-tauri/icons/: icon.icns
src-tauri/infrastructure/: connection_store.rs  crypto.rs  default_generator_registry.rs  facade_registry.rs  mod.rs  openapi_generator_adapter.rs  pg.rs  profile_store.rs  typescript_facade_generator.rs
src-tauri/models/: mod.rs
src-tauri/repositories/: connection_repository.rs  metadata_repository.rs  mod.rs
src-tauri/services/: mod.rs
src-tauri/utils/: mod.rs  naming.rs
(+128 files in other folders)
