[package]
name = "rv-meta-code"
version = "0.1.0"
edition = "2021"

[lib]
name = "rv_meta_code_lib"
path = "lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "rv-meta-code"
path = "main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
