[package]
name = "rv-meta-code"
version = "0.1.0"
edition = "2021"

[lib]
name = "rv_meta_code_lib"
path = "lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "rv-meta-code"
path = "main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
log = "0.4"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
aes-gcm = "0.10"
rand = "0.8"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
tauri-plugin-dialog = "2"

# 統合テスト（tests/backend/ 配下は自動検出されないため明示配線する）。
[[test]]
name = "dto_serialization"
path = "../tests/backend/dto_serialization_test.rs"
